Unified member_of udf to work with both single coding and arrays of codings.